# wenshu

./: .dockerignore  .env  .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_DETAILED.md  DEPLOY_SIMPLE.md  DEV_SETUP.md  QUICK_START.md  README.md  docker-compose.prod.yml  docker-compose.yml  docker.env.example  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  wenshu.code-workspace
apps/api/: .env.example  Dockerfile  ENV_SETUP.md  mypy.ini  project.json  pyproject.toml
apps/api/src/: main.py
apps/api/src/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/src/chat/: README.md  STREAMING_README.md  __init__.py  chat_service.py  dify_stream_example.py  exceptions.py  models.py  router.py  schemas.py  service.py  test_complete_streaming.py  test_integration.py  test_streaming.py  test_streaming_integration.py  utils.py  validate_structure.py
apps/api/src/chat/test/: test_complete_streaming.py  test_integration.py  test_streaming_integration.py
apps/api/src/core/: __init__.py  config.py  database.py  dependencies.py  security.py
apps/api/src/datasource/: .env.example  Dockerfile  README.md  alembic.ini  debug_auth.py  deploy.bat  deploy.sh  init_db.py  main.py  nginx.conf  pyproject.toml  requirements.txt
apps/api/src/datasource/alembic/: env.py
apps/api/src/datasource/alembic/versions/: fb29810b9555_initial_migration.py
apps/api/src/datasource/app/adapters/: __init__.py
apps/api/src/datasource/app/api/: __init__.py
apps/api/src/datasource/app/core/: casbin.py  config.py  database.py  security.py
apps/api/src/datasource/config/: rbac_policy.csv
apps/api/src/datasource/docker/: .env.example  docker-compose.middleware.yaml  docker-compose.yml  middleware.env
apps/api/src/datasource/tests/: conftest.py  test_config.py  test_datasources.py  test_db.py  test_users.py
apps/api/src/users/: __init__.py  models.py  router.py  schemas.py  service.py
(+200 files in other folders)
